--- a/Dash_1.ipynb
+++ b/Dash_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP6jZSJLyoWcZzsf6NY/3xz",
+      "authorship_tag": "ABX9TyMrFkpx6b4c/MvL0O+5m7b+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,19 @@
       ],
       "metadata": {
         "id": "EyNl1xHw1wzq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Callbacks in Dash:** <br>\n",
+        "Making it interactive\n",
+        "Now, let’s have a look at how we can create the callback that will connect the dropdown and the stock prices line chart.\n",
+        "\n",
+        "A callback is initialised using @app.callback(), which is followed by a function definition. Within this function, we define what happens on changing the value of the dropdown."
+      ],
+      "metadata": {
+        "id": "Q9OaQQF73aRO"
       }
     },
     {
