--- a/Dash_1.ipynb
+++ b/Dash_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMrFkpx6b4c/MvL0O+5m7b+",
+      "authorship_tag": "ABX9TyNbvCuJeXizMgzLN24obcp1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,7 +138,8 @@
       "cell_type": "code",
       "source": [
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='inline')"
+        "app.run_server(mode='inline')\n",
+        "#app.run_server(mode='external')"
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
