--- a/Dash_Summarize.ipynb
+++ b/Dash_Summarize.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMTXFbQEBhPptT7dnug1T6P",
+      "authorship_tag": "ABX9TyMV4iWdH6wPJ8BYkVvTgPeF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "pip install dash --upgrade"
+      ],
+      "metadata": {
+        "id": "xJ3z4NUBAu9V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "XSlKBZjYotV1"
       },
@@ -41,21 +52,10 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install \"dash-bootstrap-components<1\""
+        "!pip install \"dash-bootstrap-components<1\""
       ],
       "metadata": {
         "id": "KTTVpmzM9j4j"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install dash --upgrade"
-      ],
-      "metadata": {
-        "id": "xJ3z4NUBAu9V"
       },
       "execution_count": null,
       "outputs": []
@@ -117,7 +117,7 @@
         "controls = dbc.Card(\n",
         "    [\n",
         "      \n",
-        "        dbc.FormGroup(\n",
+        "        (\n",
         "            [\n",
         "                dbc.Label(\"Beam Size\"),\n",
         "                dcc.Slider(\n",
@@ -129,7 +129,7 @@
         "                ),\n",
         "            ]\n",
         "        ),\n",
-        "        dbc.FormGroup(\n",
+        "        (\n",
         "            [\n",
         "                dbc.Spinner(\n",
         "                    [\n",
@@ -160,7 +160,7 @@
         "                        dbc.Card(\n",
         "                            body=True,\n",
         "                            children=[\n",
-        "                                dbc.FormGroup(\n",
+        "                                (\n",
         "                                    [\n",
         "                                        dbc.Label(\"Summarized Content\"),\n",
         "                                        dcc.Textarea(\n",
@@ -182,7 +182,7 @@
         "                        dbc.Card(\n",
         "                            body=True,\n",
         "                            children=[\n",
-        "                                dbc.FormGroup(\n",
+        "                                (\n",
         "                                    [\n",
         "                                        dbc.Label(\"Original Text (Paste here)\"),\n",
         "                                        dcc.Textarea(\n",
