--- a/Dash_Summarize.ipynb
+++ b/Dash_Summarize.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMV4iWdH6wPJ8BYkVvTgPeF",
+      "authorship_tag": "ABX9TyP07Kp4CjYBqGZ8R+uv+7aG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,17 +26,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Dash/blob/main/Dash_Summarize.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install dash --upgrade"
-      ],
-      "metadata": {
-        "id": "xJ3z4NUBAu9V"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -62,6 +51,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install macrodemos --upgrade\n",
+        "!pip install -q dash==1.19.0"
+      ],
+      "metadata": {
+        "id": "xJ3z4NUBAu9V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "XTZjvYnkn45v"
       },
@@ -75,6 +76,7 @@
         "from dash.dependencies import Input, Output, State\n",
         "from jupyter_dash import JupyterDash\n",
         "from transformers import BartTokenizer, BartForConditionalGeneration\n",
+        "from transformers import AutoModelWithLMHead, AutoTokenizer\n",
         "import torch"
       ],
       "execution_count": null,
@@ -113,11 +115,12 @@
         "#app = JupyterDash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
         "app = dash.Dash(__name__)\n",
         "server = app.server\n",
+        "requests_pathname_prefix='/dash/'\n",
         "\n",
         "controls = dbc.Card(\n",
         "    [\n",
         "      \n",
-        "        (\n",
+        "        dbc.FormGroup(\n",
         "            [\n",
         "                dbc.Label(\"Beam Size\"),\n",
         "                dcc.Slider(\n",
@@ -129,7 +132,7 @@
         "                ),\n",
         "            ]\n",
         "        ),\n",
-        "        (\n",
+        "        dbc.FormGroup(\n",
         "            [\n",
         "                dbc.Spinner(\n",
         "                    [\n",
@@ -160,7 +163,7 @@
         "                        dbc.Card(\n",
         "                            body=True,\n",
         "                            children=[\n",
-        "                                (\n",
+        "                                dbc.FormGroup(\n",
         "                                    [\n",
         "                                        dbc.Label(\"Summarized Content\"),\n",
         "                                        dcc.Textarea(\n",
@@ -182,7 +185,7 @@
         "                        dbc.Card(\n",
         "                            body=True,\n",
         "                            children=[\n",
-        "                                (\n",
+        "                                dbc.FormGroup(\n",
         "                                    [\n",
         "                                        dbc.Label(\"Original Text (Paste here)\"),\n",
         "                                        dcc.Textarea(\n",
@@ -257,7 +260,7 @@
         "id": "B_6lj6V3pk7I"
       },
       "source": [
-        "app.run_server(mode='external')"
+        "app.run_server()"
       ],
       "execution_count": null,
       "outputs": []
