--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyODEnf8h5xHOAvilqQBhxDm",
+      "authorship_tag": "ABX9TyN5urB8LrJ3+TVmthWs91Je",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,7 @@
       },
       "outputs": [],
       "source": [
+        "#Create the figure\n",
         "fig = go.Figure() # or any Plotly Express function e.g. px.bar(...)\n",
         "# fig.add_trace( ... )\n",
         "# fig.update_layout( ... )"
@@ -118,6 +119,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Create the app and put the figure in it\n",
         "app = JupyterDash(__name__)\n",
         "app.layout = html.Div([\n",
         "    dcc.Graph(figure=fig)\n",
@@ -133,6 +135,7 @@
       "cell_type": "code",
       "source": [
         "#app.run_server(debug=True, use_reloader=False)  # Turn off reloader if inside Jupyter\n",
+        "\n",
         "# Run app and display result inline in the notebook\n",
         "app.run_server(mode='inline')\n",
         "\n",
@@ -169,6 +172,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Create the figure\n",
         "data = [\n",
         "{\"label\": \"revenue\",\n",
         "\"sublabel\": \"us$, in thousands\",\n",
@@ -222,6 +226,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Create the app and add the figure\n",
         "app = JupyterDash(__name__)\n",
         "app.layout = html.Div([\n",
         "    dcc.Graph(figure=fig)\n",
@@ -248,7 +253,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Assingment:**<br>\n",
+        "**Assignment:**<br>\n",
         "Select one of the figure examples from the Plotly examples and display it with Dash"
       ],
       "metadata": {
