--- a/Dash_1.ipynb
+++ b/Dash_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNbvCuJeXizMgzLN24obcp1",
+      "authorship_tag": "ABX9TyMeg+NeRIyNLenSZPTOjXRo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,28 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Dash/blob/main/Dash_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Adding interactivity to a Dash App"
+      ],
+      "metadata": {
+        "id": "5AWz-blWzr4l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In the Plotly class we learned to create figures using Plotly. <br>\n",
+        "\n",
+        "In the \"Plotly 4 Dash\" notebook we learned to add Plotly figures to Dash Apps<br>\n",
+        "\n",
+        "In this notebook we will add interactivity to Dash Apps "
+      ],
+      "metadata": {
+        "id": "spLYc_Ghz7Oy"
+      }
     },
     {
       "cell_type": "code",
@@ -64,6 +86,24 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We use html to create the layout for the app"
+      ],
+      "metadata": {
+        "id": "oCpXqxKk0SH_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Because you access Dash from your web browser, this is the only method of communication that is allowed between Dash and the internet. Any time you use Dash, you will see that the URL begins with https. This means that all information is encrypted, so that information like your login details are kept safe."
+      ],
+      "metadata": {
+        "id": "qQS3111D0k6p"
+      }
     },
     {
       "cell_type": "code",
@@ -138,8 +178,7 @@
       "cell_type": "code",
       "source": [
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='inline')\n",
-        "#app.run_server(mode='external')"
+        "app.run_server(mode='inline')"
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
