--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPScLOjiIuIDpACYGptO1CF",
+      "authorship_tag": "ABX9TyOkjAKHohFkyv1yKJZudVcy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,6 +171,134 @@
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dash App with Multiple Inputs"
+      ],
+      "metadata": {
+        "id": "Iixmen504SkP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "QosbtFjE4xw3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app = JupyterDash(__name__)\n",
+        "\n",
+        "df = pd.read_csv('https://plotly.github.io/datasets/country_indicators.csv')\n",
+        "\n",
+        "app.layout = html.Div([\n",
+        "    html.Div([\n",
+        "\n",
+        "        html.Div([\n",
+        "            dcc.Dropdown(\n",
+        "                df['Indicator Name'].unique(),\n",
+        "                'Fertility rate, total (births per woman)',\n",
+        "                id='xaxis-column'\n",
+        "            ),\n",
+        "            dcc.RadioItems(\n",
+        "                ['Linear', 'Log'],\n",
+        "                'Linear',\n",
+        "                id='xaxis-type',\n",
+        "                inline=True\n",
+        "            )\n",
+        "        ], style={'width': '48%', 'display': 'inline-block'}),\n",
+        "\n",
+        "        html.Div([\n",
+        "            dcc.Dropdown(\n",
+        "                df['Indicator Name'].unique(),\n",
+        "                'Life expectancy at birth, total (years)',\n",
+        "                id='yaxis-column'\n",
+        "            ),\n",
+        "            dcc.RadioItems(\n",
+        "                ['Linear', 'Log'],\n",
+        "                'Linear',\n",
+        "                id='yaxis-type',\n",
+        "                inline=True\n",
+        "            )\n",
+        "        ], style={'width': '48%', 'float': 'right', 'display': 'inline-block'})\n",
+        "    ]),\n",
+        "\n",
+        "    dcc.Graph(id='indicator-graphic'),\n",
+        "\n",
+        "    dcc.Slider(\n",
+        "        df['Year'].min(),\n",
+        "        df['Year'].max(),\n",
+        "        step=None,\n",
+        "        id='year--slider',\n",
+        "        value=df['Year'].max(),\n",
+        "        marks={str(year): str(year) for year in df['Year'].unique()},\n",
+        "\n",
+        "    )\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "9Gi4RI_x46CD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@app.callback(\n",
+        "    Output('indicator-graphic', 'figure'),\n",
+        "    Input('xaxis-column', 'value'),\n",
+        "    Input('yaxis-column', 'value'),\n",
+        "    Input('xaxis-type', 'value'),\n",
+        "    Input('yaxis-type', 'value'),\n",
+        "    Input('year--slider', 'value'))\n",
+        "def update_graph(xaxis_column_name, yaxis_column_name,\n",
+        "                 xaxis_type, yaxis_type,\n",
+        "                 year_value):\n",
+        "    dff = df[df['Year'] == year_value]\n",
+        "\n",
+        "    fig = px.scatter(x=dff[dff['Indicator Name'] == xaxis_column_name]['Value'],\n",
+        "                     y=dff[dff['Indicator Name'] == yaxis_column_name]['Value'],\n",
+        "                     hover_name=dff[dff['Indicator Name'] == yaxis_column_name]['Country Name'])\n",
+        "\n",
+        "    fig.update_layout(margin={'l': 40, 'b': 40, 't': 10, 'r': 0}, hovermode='closest')\n",
+        "\n",
+        "    fig.update_xaxes(title=xaxis_column_name,\n",
+        "                     type='linear' if xaxis_type == 'Linear' else 'log')\n",
+        "\n",
+        "    fig.update_yaxes(title=yaxis_column_name,\n",
+        "                     type='linear' if yaxis_type == 'Linear' else 'log')\n",
+        "\n",
+        "    return fig\n"
+      ],
+      "metadata": {
+        "id": "mRRu_6Dj48BK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    app.run_server(debug=True)\n",
+        "    #app.run_server(mode='inline')"
+      ],
+      "metadata": {
+        "id": "s4tzvxFM4hOJ"
       },
       "execution_count": null,
       "outputs": []
