--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOkjAKHohFkyv1yKJZudVcy",
+      "authorship_tag": "ABX9TyMCIYL48Itrhl7/Rohc+Dyi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,14 +291,82 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "if __name__ == '__main__':\n",
         "    app.run_server(debug=True)\n",
         "    #app.run_server(mode='inline')"
       ],
       "metadata": {
         "id": "s4tzvxFM4hOJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# App with Multiple Outputs"
+      ],
+      "metadata": {
+        "id": "iVX26Z5a5dHo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+        "\n",
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "\n",
+        "app.layout = html.Div([\n",
+        "    dcc.Input(\n",
+        "        id='num-multi',\n",
+        "        type='number',\n",
+        "        value=5\n",
+        "    ),\n",
+        "    html.Table([\n",
+        "        html.Tr([html.Td(['x', html.Sup(2)]), html.Td(id='square')]),\n",
+        "        html.Tr([html.Td(['x', html.Sup(3)]), html.Td(id='cube')]),\n",
+        "        html.Tr([html.Td([2, html.Sup('x')]), html.Td(id='twos')]),\n",
+        "        html.Tr([html.Td([3, html.Sup('x')]), html.Td(id='threes')]),\n",
+        "        html.Tr([html.Td(['x', html.Sup('x')]), html.Td(id='x^x')]),\n",
+        "    ]),\n",
+        "])\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xNXjYH1k5jVU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@app.callback(\n",
+        "    Output('square', 'children'),\n",
+        "    Output('cube', 'children'),\n",
+        "    Output('twos', 'children'),\n",
+        "    Output('threes', 'children'),\n",
+        "    Output('x^x', 'children'),\n",
+        "    Input('num-multi', 'value'))\n",
+        "def callback_a(x):\n",
+        "    return x**2, x**3, 2**x, 3**x, x**x"
+      ],
+      "metadata": {
+        "id": "iLa08iNn53-n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    app.run_server(debug=True)\n",
+        "    #app.run_server(mode='inline')"
+      ],
+      "metadata": {
+        "id": "OJxDfEE0556j"
       },
       "execution_count": null,
       "outputs": []
