--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMCIYL48Itrhl7/Rohc+Dyi",
+      "authorship_tag": "ABX9TyMDTCV3EC3NX/sATgmTf/CT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +204,6 @@
         "\n",
         "app.layout = html.Div([\n",
         "    html.Div([\n",
-        "\n",
         "        html.Div([\n",
         "            dcc.Dropdown(\n",
         "                df['Indicator Name'].unique(),\n",
@@ -313,7 +312,9 @@
     {
       "cell_type": "code",
       "source": [
-        "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+        "#If you want to use an external style sheet this is where you would \n",
+        "#put it\n",
+        "#external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
         "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
@@ -367,6 +368,102 @@
       ],
       "metadata": {
         "id": "OJxDfEE0556j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# App with Chained Callbacks"
+      ],
+      "metadata": {
+        "id": "OMRN75Lq6IUC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "With this example, the user is given two options New York or Canada. <br>\n",
+        "Once the user selects a country, the cities for that country are displayed. <br>\n",
+        "This is are chained callbacks"
+      ],
+      "metadata": {
+        "id": "np8I8zcO73QC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+        "\n",
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "\n",
+        "all_options = {\n",
+        "    'America': ['New York City', 'San Francisco', 'Cincinnati'],\n",
+        "    'Canada': [u'Montréal', 'Toronto', 'Ottawa']\n",
+        "}\n",
+        "app.layout = html.Div([\n",
+        "    dcc.RadioItems(\n",
+        "        list(all_options.keys()),\n",
+        "        'America',\n",
+        "        id='countries-radio',\n",
+        "    ),\n",
+        "\n",
+        "    html.Hr(),\n",
+        "\n",
+        "    dcc.RadioItems(id='cities-radio'),\n",
+        "\n",
+        "    html.Hr(),\n",
+        "\n",
+        "    html.Div(id='display-selected-values')\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "NeVopwrs7C0-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@app.callback(\n",
+        "    Output('cities-radio', 'options'),\n",
+        "    Input('countries-radio', 'value'))\n",
+        "def set_cities_options(selected_country):\n",
+        "    return [{'label': i, 'value': i} for i in all_options[selected_country]]\n",
+        "\n",
+        "@app.callback(\n",
+        "    Output('cities-radio', 'value'),\n",
+        "    Input('cities-radio', 'options'))\n",
+        "def set_cities_value(available_options):\n",
+        "    return available_options[0]['value']\n",
+        "\n",
+        "@app.callback(\n",
+        "    Output('display-selected-values', 'children'),\n",
+        "    Input('countries-radio', 'value'),\n",
+        "    Input('cities-radio', 'value'))\n",
+        "def set_display_children(selected_country, selected_city):\n",
+        "    return u'{} is a city in {}'.format(\n",
+        "        selected_city, selected_country,\n",
+        "    )"
+      ],
+      "metadata": {
+        "id": "OFwk48136MPH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    app.run_server(debug=True)\n",
+        "    #app.run_server(mode='inline')"
+      ],
+      "metadata": {
+        "id": "8A00DGWC7HAM"
       },
       "execution_count": null,
       "outputs": []
