--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMDTCV3EC3NX/sATgmTf/CT",
+      "authorship_tag": "ABX9TyODTzSxdzMoI/IXVY3InXK5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -426,6 +426,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The first callback updates the available options in the second dcc.RadioItems component based off of the selected value in the first dcc.RadioItems component.\n",
+        "<br><br>\n",
+        "The second callback sets an initial value when the options property changes: it sets it to the first value in that options array.\n",
+        "<br><br>\n",
+        "The final callback displays the selected value of each component. If you change the value of the countries dcc.RadioItems component, Dash will wait until the value of the cities component is updated before calling the final callback. This prevents your callbacks from being called with inconsistent state like with \"America\" and \"Montréal\"."
+      ],
+      "metadata": {
+        "id": "3iwrmYKq8njf"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "@app.callback(\n",
@@ -464,6 +477,156 @@
       ],
       "metadata": {
         "id": "8A00DGWC7HAM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dash App with State"
+      ],
+      "metadata": {
+        "id": "1uDKVKoq8w0h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this example, the output changes anytime the input value changes. <br>"
+      ],
+      "metadata": {
+        "id": "lEOiJmUx9hw6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "external_stylesheets = [\"https://codepen.io/chriddyp/pen/bWLwgP.css\"]\n",
+        "\n",
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "\n",
+        "app.layout = html.Div([\n",
+        "    dcc.Input(id=\"input-1\", type=\"text\", value=\"Montréal\"),\n",
+        "    dcc.Input(id=\"input-2\", type=\"text\", value=\"Canada\"),\n",
+        "    html.Div(id=\"number-output\"),\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "6_AW1yPX9o8W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@app.callback(\n",
+        "    Output(\"number-output\", \"children\"),\n",
+        "    Input(\"input-1\", \"value\"),\n",
+        "    Input(\"input-2\", \"value\"),\n",
+        ")\n",
+        "def update_output(input1, input2):\n",
+        "    return u'Input 1 is \"{}\" and Input 2 is \"{}\"'.format(input1, input2)"
+      ],
+      "metadata": {
+        "id": "CLxXNAL09Iju"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "    app.run_server(debug=True)\n",
+        "    #app.run_server(mode='inline')"
+      ],
+      "metadata": {
+        "id": "Ez5kmncf9sN_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If we include State, the output will not change until the Submit button is pressed. "
+      ],
+      "metadata": {
+        "id": "v-Iti-Fl-oef"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from dash.dependencies import State"
+      ],
+      "metadata": {
+        "id": "MEWJiepN-t1I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note that the input ids are now input-1-state<br>\n",
+        "And the output is now output-state"
+      ],
+      "metadata": {
+        "id": "fYYRjq3p_kHj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+        "\n",
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "\n",
+        "app.layout = html.Div([\n",
+        "    dcc.Input(id='input-1-state', type='text', value='Montréal'),\n",
+        "    dcc.Input(id='input-2-state', type='text', value='Canada'),\n",
+        "    html.Button(id='submit-button-state', n_clicks=0, children='Submit'),\n",
+        "    html.Div(id='output-state')\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "IQvwS5LO-t3T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@app.callback(Output('output-state', 'children'),\n",
+        "              Input('submit-button-state', 'n_clicks'),\n",
+        "              State('input-1-state', 'value'),\n",
+        "              State('input-2-state', 'value'))\n",
+        "def update_output(n_clicks, input1, input2):\n",
+        "    return u'''\n",
+        "        The Button has been pressed {} times,\n",
+        "        Input 1 is \"{}\",\n",
+        "        and Input 2 is \"{}\"\n",
+        "    '''.format(n_clicks, input1, input2)"
+      ],
+      "metadata": {
+        "id": "Xi5dMAry_NmC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    app.run_server(debug=True)\n",
+        "    #app.run_server(mode='inline')"
+      ],
+      "metadata": {
+        "id": "DVlvgS0N_P1R"
       },
       "execution_count": null,
       "outputs": []
