--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyODTzSxdzMoI/IXVY3InXK5",
+      "authorship_tag": "ABX9TyPabfjAUFoPtPbScVnpBTbu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -627,6 +627,110 @@
       ],
       "metadata": {
         "id": "DVlvgS0N_P1R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Passing Components into Callbacks Instead of IDs"
+      ],
+      "metadata": {
+        "id": "Z0DgrTWA_8oC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)"
+      ],
+      "metadata": {
+        "id": "kz2l5pnCAlhx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.layout = html.Div([\n",
+        "    html.H6(\"Change the value in the text box to see callbacks in action!\"),\n",
+        "    html.Div([\n",
+        "        \"Input: \",\n",
+        "        dcc.Input(id='my-input', value='initial value', type='text')\n",
+        "    ]),\n",
+        "    html.Br(),\n",
+        "    html.Div(id='my-output'),\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "wjQzZg4BAnTC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@app.callback(\n",
+        "    Output(component_id='my-output', component_property='children'),\n",
+        "    Input(component_id='my-input', component_property='value')\n",
+        ")\n",
+        "def update_output_div(input_value):\n",
+        "    return f'Output: {input_value}'\n"
+      ],
+      "metadata": {
+        "id": "f0G6cKaS_8zN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "    app.run_server(debug=True)\n",
+        "    #app.run_server(mode='inline')"
+      ],
+      "metadata": {
+        "id": "tFCuA8dmAbW4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app = JupyterDash(__name__)\n",
+        "\n",
+        "my_input = dcc.Input(value='initial value', type='text')\n",
+        "my_output = html.Div()\n",
+        "\n",
+        "app.layout = html.Div([\n",
+        "    html.H6(\"Change the value in the text box to see callbacks in action!\"),\n",
+        "    html.Div([\n",
+        "        \"Input: \",\n",
+        "        my_input\n",
+        "    ]),\n",
+        "    html.Br(),\n",
+        "    my_output\n",
+        "])\n",
+        "\n",
+        "\n",
+        "@app.callback(\n",
+        "    Output(my_output, component_property='children'),\n",
+        "    Input(my_input, component_property='value')\n",
+        ")\n",
+        "def update_output_div(input_value):\n",
+        "    return f'Output: {input_value}'\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    app.run_server(debug=True)"
+      ],
+      "metadata": {
+        "id": "TtjyIVGjA8IR"
       },
       "execution_count": null,
       "outputs": []
