--- a/Useful_Dash_Plotly_Examples.ipynb
+++ b/Useful_Dash_Plotly_Examples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPmU1Am3qzlB9MJaHEdJ5xF",
+      "authorship_tag": "ABX9TyNWhaGD8pGSfe8LfpzCiQoG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Dash/blob/main/Useful_Dash_Plotly_Examples.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This notebook has two examples of Plotly and Dash interactive visualizations. \n",
+        "<br>\n",
+        "1. The first prints out information about the data point when a user clicks on a datapoint. <br>\n",
+        "2. The second example updates the information displayed when the mouse hovers over a datapoint. "
+      ],
+      "metadata": {
+        "id": "Munkz7NBDDNK"
+      }
     },
     {
       "cell_type": "code",
@@ -52,6 +64,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Example 1"
+      ],
+      "metadata": {
+        "id": "PswcGXN4D3-H"
+      }
     },
     {
       "cell_type": "code",
@@ -177,6 +198,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Example 2"
+      ],
+      "metadata": {
+        "id": "W9z8xp1CDjxy"
+      }
     },
     {
       "cell_type": "code",
@@ -324,6 +354,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://dash.plotly.com/interactive-graphing"
+      ],
+      "metadata": {
+        "id": "RWlr4vLkEKXE"
+      }
     }
   ]
 }
