--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPabfjAUFoPtPbScVnpBTbu",
+      "authorship_tag": "ABX9TyOudKev3hDDqYXPbT1oS/hp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,7 +314,7 @@
       "source": [
         "#If you want to use an external style sheet this is where you would \n",
         "#put it\n",
-        "#external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+        "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
         "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
