--- a/Dash_Chatbot.ipynb
+++ b/Dash_Chatbot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMGwYteBJNXvE+zt0Wpm7Tg",
+      "authorship_tag": "ABX9TyPiAk+F9HsDtJ30ciF2njvt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip uninstall werkzeug"
+      ],
+      "metadata": {
+        "id": "8RQgvcsprUvY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install macrodemos --upgrade\n",
         "!pip install -q dash==1.19.0"
       ],
@@ -63,13 +74,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install -U dash"
+      ],
+      "metadata": {
+        "id": "WSas-xWVp9nA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install werkzeug==2.0.3"
+      ],
+      "metadata": {
+        "id": "e9cQLKUkr0GO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "wNQanZGJcJhx"
       },
       "source": [
         "import time\n",
-        "\n",
-        "import dash\n",
+        "import plotly.express as px\n",
+        "#from jupyter_dash import JupyterDash\n",
+        "from dash.dependencies import Input, Output\n",
+        "from dash import html\n",
+        "from dash import dcc\n",
         "import dash_html_components as html\n",
         "import dash_core_components as dcc\n",
         "import dash_bootstrap_components as dbc\n",
