--- a/Useful_Dash_Plotly_Examples.ipynb
+++ b/Useful_Dash_Plotly_Examples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNWhaGD8pGSfe8LfpzCiQoG",
+      "authorship_tag": "ABX9TyMsxXJfFzv3NzoR2JXympO/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -362,6 +362,21 @@
       ],
       "metadata": {
         "id": "RWlr4vLkEKXE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Additional Examples can be found here: https://dash.gallery/Portal/\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "The source code for the examples can be found here: \n",
+        "https://github.com/plotly/dash-sample-apps/\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "bp-MFl49ONYr"
       }
     }
   ]
