--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOudKev3hDDqYXPbT1oS/hp",
+      "authorship_tag": "ABX9TyMRjquVv/QLw2oc7b7E+oEr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "# Build App\n",
         "app = JupyterDash(__name__)\n",
         "app.layout = html.Div([\n",
-        "    html.H6(\"Change the value in the text box to see callbacks in action!\"),\n",
+        "    html.H3(\"Change the value in the text box to see callbacks in action!\"),\n",
         "    html.Div([\n",
         "        \"Input: \",\n",
         "        dcc.Input(id='my-input', value='initial value', type='text')\n",
@@ -167,7 +167,7 @@
       "cell_type": "code",
       "source": [
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='inline')"
+        "app.run_server(mode='external')"
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
